# hades

./: LICENSE  README.md  gen.py  misc.py  pyproject.toml  requirements.txt  setup.py
hades/: __init__.py  gen.py  mmd.py  setup.py
notebook/: cyclo_octane.ipynb  image.ipynb  intro.ipynb  synthetic_low.ipynb
notebook/.ipynb_checkpoints/: comparison-checkpoint.ipynb  manifold_hypothesis-checkpoint.ipynb  network-checkpoint.ipynb  synthetic_high-checkpoint.ipynb
notebook/data/: cyclo_octane.npy  cyclo_octane_Isomap.npy  road1.tif  road2.tif  road3.tif  road4.tif
