[tool.poetry]
name = "hades"
version = "0.1.0"
description = "fast singularity detection with kernel"
authors = ["Uzu Lim <finnlimsh@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.19.2"
scipy = {version = ">=1.11.3", python = ">=3.8,<3.13"}
matplotlib = ">=3.5.3"
scikit-learn = ">=1.0.2"
statsmodels = ">=0.10.0"
scikit-dimension = ">=0.3.3"
kneed = ">=0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
